# pybaileys

./: MANIFEST.in  bootstrap.py  diognizy.py  prebuild.py  pyproject.toml  readme.md  release.py  sanity.py  setup.py  test.py
src/pybaileys/: __init__.py  bootstrap.py  client.py
src/pybaileys.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/pybaileys/engine/: bridge.js  package-lock.json  package.json
test/: aaa.py
